--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "publisher": "walele993",
   "engines": { "vscode": "^1.75.0" },
   "categories": ["Themes"],
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/walele993/fable_a_vsc_theme"
+  },
   "contributes": {
     "themes": [
       {
