--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fable-code-theme",
-  "displayName": "Fable Code Theme",
+  "displayName": "Fable",
   "description": "Un tema magico con 4 varianti: Unicorn, Gelato, Grimoir, Liquorice",
   "version": "1.0.0",
   "publisher": "walele993",
